--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mediasfu-reactjs",
-  "version": "1.0.9",
+  "version": "1.10.0",
   "private": false,
   "main": "dist/main.js",
   "module": "dist/main.js",
@@ -36,7 +36,11 @@
     "web",
     "sdk",
     "reactjs",
-    "mediasoup"
+    "mediasoup",
+    "screen sharing",
+    "screen sharing annotation",
+    "collaborative whiteboard",
+    "webRTC recording"
   ],
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
@@ -46,11 +50,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mediapipe/selfie_segmentation": "^0.1.1675465747",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
     "@yudiel/react-qr-scanner": "^1.2.10",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
     "universal-cookie": "^7.1.0",
     "web-vitals": "^2.1.4"
@@ -67,7 +73,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "babel-loader": "^9.1.3",
+    "file-loader": "^6.2.0",
+    "image-webpack-loader": "^8.1.0",
     "react-scripts": "5.0.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   },
