--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ rollup.config.js
 src/components/mediasfuComponents/MediasfuGeneric1.js
 mediasfu-reactjs-0-0.1.0.tgz
 webpack.config.js
+rename_js_to_ts.sh
+specific_js_ts.sh
