--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mediasfu-reactjs",
-  "version": "1.14.0",
+  "version": "2.0.0",
   "private": false,
   "main": "dist/main.js",
   "module": "dist/main.js",
@@ -17,8 +17,9 @@
     "email": "info@mediasfu.com"
   },
   "files": [
-    "dist/"
+    "dist/","README.md"
   ],
+  "types": "dist/types/main.d.ts",
   "keywords": [
     "mediasfu",
     "react",
@@ -43,40 +44,47 @@
     "webRTC recording"
   ],
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mediapipe/selfie_segmentation": "^0.1.1675465747",
-    "@mui/icons-material": "^5.15.9",
-    "@mui/material": "^5.15.9",
-    "@yudiel/react-qr-scanner": "^1.2.10",
+    "@yudiel/react-qr-scanner": "^2.0.8",
     "bootstrap": "^5.3.3",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.3",
-    "react-dom": "^18.2.0",
-    "universal-cookie": "^7.1.0",
-    "web-vitals": "^2.1.4"
+    "universal-cookie": "^7.2.0"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.8",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.9.0",
+    "@typescript-eslint/parser": "^8.9.0",
+    "ajv": "^7.2.4",
     "babel-loader": "^9.1.3",
+    "eslint": "^9.12.0",
+    "eslint-plugin-react-refresh": "^0.4.12",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "image-webpack-loader": "^8.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-refresh": "^0.14.2",
     "react-scripts": "5.0.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.3",
     "url-loader": "^4.1.1",
+    "web-vitals": "^2.1.4",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   },
@@ -85,7 +93,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "buildnpm": "rm -rf dist && webpack --mode production"
+    "buildnpm": "rm -rf dist && webpack --config webpack.config.js --mode production && tsc --emitDeclarationOnly -p tsconfig.json",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix"
   },
   "eslintConfig": {
     "extends": [
