--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mediasfu-reactjs",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "private": false,
   "main": "dist/main.js",
   "module": "dist/main.js",
@@ -41,7 +41,11 @@
     "screen sharing",
     "screen sharing annotation",
     "collaborative whiteboard",
-    "webRTC recording"
+    "webRTC recording",
+    "webRTC streaming",
+    "mediasfu-reactjs",
+    "mediasfu-reactjs-sdk",
+    "mediasfu-reactjs-prebuilt"
   ],
   "dependencies": {
   },
