--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+/dist/
 
 npm-debug.log*
 yarn-debug.log*
@@ -25,8 +26,6 @@ yarn-error.log*
 src/main1.js
 publish.js
 rollup.config.js
-src/components/mediasfuComponents/MediasfuGeneric1.js
-mediasfu-reactjs-0-0.1.0.tgz
 webpack.config.js
 rename_js_to_ts.sh
 specific_js_ts.sh
