--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mediasfu-reactjs",
-  "version": "3.1.4",
+  "version": "3.1.5",
   "private": false,
   "main": "dist/main.js",
   "module": "dist/main.js",
@@ -15,7 +15,7 @@
   "bugs": {
     "url": "https://github.com/MediaSFU/MediaSFU-ReactJS/issues",
     "email": "info@mediasfu.com"
-  }, 
+  },
   "files": [
     "dist/",
     "README.md"
@@ -54,7 +54,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mediapipe/selfie_segmentation": "0.1.1675465747",
-    "@yudiel/react-qr-scanner": "^2.0.8",
     "bootstrap": "^5.3.3",
     "mediasoup-client": "3.7.17",
     "react": "^18.3.1",
@@ -79,7 +78,6 @@
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
     "@typescript-eslint/parser": "^8.9.0",
-    "@yudiel/react-qr-scanner": "^2.0.8",
     "ajv": "^7.2.4",
     "babel-loader": "^9.1.3",
     "bootstrap": "^5.3.3",
@@ -95,10 +93,10 @@
     "react-scripts": "5.0.1",
     "socket.io-client": "4.8.0",
     "ts-loader": "^9.5.1",
-    "typedoc": "^0.26.10",
-    "typedoc-plugin-extras": "^3.1.0",
-    "typedoc-plugin-markdown": "^4.2.9",
-    "typescript": "^5.6.3",
+    "typedoc": "0.26.10",
+    "typedoc-plugin-extras": "3.1.0",
+    "typedoc-plugin-markdown": "4.2.9",
+    "typescript": "^5.7.3",
     "universal-cookie": "^7.2.0",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4",
@@ -115,7 +113,6 @@
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "build-docs": "typedoc"
-
   },
   "eslintConfig": {
     "extends": [
