--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mediasfu-reactjs",
-  "version": "4.0.1",
+  "version": "4.0.2",
   "private": false,
   "main": "dist/main.js",
   "module": "dist/main.js",
@@ -55,7 +55,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mediapipe/selfie_segmentation": "0.1.1675465747",
     "bootstrap": "^5.3.3",
-    "mediasoup-client": "3.14.0",
+    "mediasoup-client": "^3.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "socket.io-client": "4.8.0",
@@ -86,7 +86,7 @@
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "image-webpack-loader": "^8.1.0",
-    "mediasoup-client": "3.14.0",
+    "mediasoup-client": "^3.15.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-refresh": "^0.14.2",
@@ -102,6 +102,18 @@
     "web-vitals": "^2.1.4",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
+  },
+  "overrides": {
+    "typescript": "$typescript",
+    "react-scripts": {
+      "typescript": "$typescript"
+    },
+    "react": "$react",
+    "react-dom": "$react-dom",
+    "@types/react": "$@types/react",
+    "@types/react-dom": "$@types/react-dom",
+    "eslint": "$eslint",
+    "webpack": "$webpack"
   },
   "scripts": {
     "start": "react-scripts start",
