mediasoup-client update for license issues.

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 GENERATE_SOURCEMAP=false
+# Disable ESLint in react-scripts to avoid version conflicts
+ESLINT_NO_DEV_ERRORS=true
+DISABLE_ESLINT_PLUGIN=true
