--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mediasfu-reactjs",
-  "version": "4.0.2",
+  "version": "4.0.3",
   "private": false,
   "main": "dist/main.js",
   "module": "dist/main.js",
@@ -55,7 +55,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mediapipe/selfie_segmentation": "0.1.1675465747",
     "bootstrap": "^5.3.3",
-    "mediasoup-client": "^3.15.6",
+    "mediasoup-client": "^3.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "socket.io-client": "4.8.0",
@@ -76,17 +76,17 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@typescript-eslint/eslint-plugin": "^8.9.0",
-    "@typescript-eslint/parser": "^8.9.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "ajv": "^7.2.4",
     "babel-loader": "^9.1.3",
     "bootstrap": "^5.3.3",
-    "eslint": "^9.12.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "image-webpack-loader": "^8.1.0",
-    "mediasoup-client": "^3.15.7",
+    "mediasoup-client": "^3.16.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-refresh": "^0.14.2",
@@ -118,7 +118,7 @@
   "scripts": {
     "start": "react-scripts start",
     "start:secure": "set HTTPS=true && set PORT=3001 && react-scripts start",
-    "build": "react-scripts build",
+    "build": "set ESLINT_NO_DEV_ERRORS=true && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "buildnpm": "rm -rf dist && webpack --config webpack.config.js --mode production && tsc --emitDeclarationOnly -p tsconfig.json",
